a11y: Fix the Colors - Contrast Ratio

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,13 +39,16 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   background-color: #f3f3f3;
 }
 #footer {
-  background-color: #444;
+  background-color: #1d2e39;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+}
+#footer a {
+  color: #fff
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -87,7 +90,7 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #006cc9;
     text-decoration: none;
 }
 
@@ -107,7 +110,7 @@ nav h1 a {
   width: 100%;
   padding: 1rem 0;
   text-align: center;
-  background-color: #3397DB;
+  background-color: #1d2e39;
 }
 .filter-options h2 {
   color: white;
@@ -115,6 +118,10 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+}
+.filter-options label {
+  position: absolute;
+  left: -100%;
 }
 .filter-options select {
   background-color: white;
@@ -156,7 +163,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #1d2e39;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -170,7 +177,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #1d2e39;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -219,7 +226,7 @@ nav h1 a {
   width: 100%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #1d2e39;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -256,7 +263,7 @@ nav h1 a {
   padding: 30px 40px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #1d2e39;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
@@ -291,4 +298,10 @@ nav h1 a {
     grid-row: 1 / 3;
     height: auto;
   }
+}
+
+
+/* ====================== Overwrite ====================== */
+.leaflet-container a {
+  color: #000 !important
 }
